test/tests/operators/xsv/error_csv_quotes_vs_field_sep.txt
error: quote character `,` conflicts with `field_separator=","`
 --> tests/operators/xsv/error_csv_quotes_vs_field_sep.tql:6:19
  |
6 |   read_csv quotes=","
  |                   ^^^ 
